# DigitalRecognition

./: .gitignore  CMakeLists.txt  InferResult.cpp  InferResult.h  README.md  benchmark.cpp  func.cmake  infer.h  modelManager.cpp  modelManager.h
model/: BP.mapping  BP.xml  mobileNet.mapping  mobileNet.xml  mobilenet3.xml  model.mapping
openvino/: inferRequest.h  modelManager.cpp  modelManager.h
rknn/: modelManager.cpp  modelManager.h
templateMatch/: modelManager.cpp  modelManager.h
tensorrt/: inferRequest.cpp  inferRequest.h  modelManager.cpp  modelManager.h  preprocess.h
